2008-04-27  Cameron Zwarich  <cwzwarich@uwaterloo.ca>

        Reviewed by Maciej.

        Bug 18746: SQUIRRELFISH: indirect eval used when direct eval should be used
        <https://bugs.webkit.org/show_bug.cgi?id=18746>

        Change the base to the correct value of the 'this' object after the direct
        eval test instead of before.

        Fixes 5 layout tests.

        * VM/Machine.cpp:
        (KJS::Machine::privateExecute):
        * kjs/nodes.cpp:
        (KJS::EvalFunctionCallNode::emitCode):

2008-04-26  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Oliver.
        
        - document all property getting, setting and deleting opcodes
        
        (And fix function parameter names to match corresponding opcode parameter names.)

        * VM/CodeGenerator.cpp:
        (KJS::CodeGenerator::emitResolve):
        (KJS::CodeGenerator::emitResolveBase):
        (KJS::CodeGenerator::emitResolveBaseAndProperty):
        (KJS::CodeGenerator::emitResolveBaseAndFunc):
        (KJS::CodeGenerator::emitGetPropId):
        (KJS::CodeGenerator::emitPutPropId):
        (KJS::CodeGenerator::emitDeletePropId):
        (KJS::CodeGenerator::emitPutPropVal):
        * VM/CodeGenerator.h:
        * VM/Machine.cpp:
        (KJS::resolve):
        (KJS::resolveBase):
        (KJS::resolveBaseAndProperty):
        (KJS::resolveBaseAndFunc):
        (KJS::Machine::privateExecute):
        * kjs/nodes.cpp:
        (KJS::ResolveNode::emitCode):
        (KJS::ArrayNode::emitCode):
        (KJS::PropertyListNode::emitCode):
        (KJS::BracketAccessorNode::emitCode):
        (KJS::EvalFunctionCallNode::emitCode):
        (KJS::FunctionCallResolveNode::emitCode):
        (KJS::FunctionCallBracketNode::emitCode):
        (KJS::PostIncResolveNode::emitCode):
        (KJS::PostDecResolveNode::emitCode):
        (KJS::PostIncBracketNode::emitCode):
        (KJS::PostDecBracketNode::emitCode):
        (KJS::PostIncDotNode::emitCode):